--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <script src="greg.js"></script>
 </head>
 <body>
+    <div class="el-greggle">
+        <div class="el-greggo">
+
+        </div>
+    </div>
     <div class="greggo">
-        <img class="greg" alt="greg" src="images/greg.png"/>
+        <img class="greg" alt="greg" src="images/el-greg.png"/>
     </div>
 </body>
 </html>
