--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <div class="greggo">
         <img class="greg" alt="greg" src="images/el-greg.png"/>
     </div>
+    <footer>
+        <p class="groogle">Sorry Greg xoxo</p>
+    </footer>
 </body>
 </html>
