--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="greggo">
-        <img class="greg" alt="greg" src="images/el-greg.png"/>
+        <img class="greg" alt="greg" src="Images/el-greg.png"/>
     </div>
     <footer>
         <p class="groogle">Sorry Greg xoxo</p>
