shake shake shake

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GREG!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="greg.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="greg.js"></script>
 </head>
 <body>
@@ -15,7 +16,11 @@
         </div>
     </div>
     <div class="greggo">
-        <img class="greg" alt="greg" src="Images/el-greg.png"/>
+        <img id='greg-head' class="greg" alt="greg" src="Images/el-greg_face.png"/>
+        <img id='greg-hat' class="greg" alt="greg" src="Images/el-greg_hat.png"/>
+        <img id='greg-marraca' class="greg" alt="greg" src="Images/el-greg_marraca.png"/>
+        <img id='greg-marraca-2' class="greg" alt="greg" src="Images/el-greg_marraca_2.png"/>
+        <img id='greg-text' class="greg" alt="greg" src="Images/el-greg_fiesta.png"/>
     </div>
     <footer>
         <p class="groogle">Sorry Greg xoxo</p>
