--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>GREG!</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="greg.css" />
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="greg.js"></script>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>GREG!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="greg.css" />
 </head>
 <body>
-    <div class="el-greggle">
-        <div class="el-greggo">
+  <div id="canvas-container">
+    <canvas id="game-canvas">Your browser does not support canvas!</canvas>
+  </div>
 
-        </div>
-    </div>
-    <div class="greggo">
-        <img id='greg-head' class="greg" alt="greg" src="Images/el-greg_face.png"/>
-        <img id='greg-hat' class="greg" alt="greg" src="Images/el-greg_hat.png"/>
-        <img id='greg-marraca' class="greg" alt="greg" src="Images/el-greg_marraca.png"/>
-        <img id='greg-marraca-2' class="greg" alt="greg" src="Images/el-greg_marraca_2.png"/>
-        <img id='greg-text' class="greg" alt="greg" src="Images/el-greg_fiesta.png"/>
-    </div>
-    <footer>
-        <p class="groogle">Sorry Greg xoxo</p>
-    </footer>
+  <footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="greg.js"></script> 
+    <script src="greg-game.js"></script> 
+  </footer>
 </body>
 </html>
